Use __with_tenant_ as delimiter